--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "@proconex/atomic",
+  "name": "@proconex/atomic-design-kit",
   "version": "0.0.0",
   "exports": {
     ".": "./mod.ts"
