--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,7 +12,7 @@
     "deploy": "deno task build && ftm git",
     "publish:check": "deno publish --dry-run --allow-dirty",
     "test": "deno test -A ./tests/tests.ts --coverage=cov",
-    "version": "deno run -A jsr:@fathym/common@0/version"
+    "version": "deno run -A jsr:@fathym/common@0/build/version"
   },
   "imports": {
     "preact": "npm:preact@10.20.1",
